--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
           version: v1.53
   func-testing:
     runs-on: ubuntu-latest
+    needs: golangci
     steps:
       - uses: actions/checkout@v3
       - name: Setup Go
@@ -37,6 +38,7 @@ jobs:
           path: ./technopark-dbms-forum
   stress-testing:
     runs-on: ubuntu-latest
+    needs: func-testing
     steps:
       - uses: actions/checkout@v3
       - name: download test program
