--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: download test program
-        uses: actions/upload-artifact@v3
+        uses: actions/download-artifact@v3
         with:
           name: technopark-dbms-forum
           path: ./technopark-dbms-forum
